# projet2-poo

./: CMakeLists.txt
include/: Equation.h  Mesh.h  Problem.h  Timer.h  Variable.h
src/: Equation.cpp  Mesh.cpp  Problem.cpp  Timer.cpp  Variable.cpp  main.cpp
